@@ -258,6 +258,12 @@ switch($step) {
 
 			$config_array = $_SESSION['install_config'];
 			$config_array['CONFIGURED'] = true;
+			
+			// Clear the SERVER_URL when it's identical to the calculated value
+			$GUESS_URL = stripslashes("http://".$_SERVER["SERVER_NAME"].dirname($SCRIPT_NAME)."/");
+			$config_array['SERVER_URL'] = rtrim(trim($config_array['SERVER_URL']),'/').'/';
+			if ($config_array['SERVER_URL'] == $GUESS_URL) $config_array['SERVER_URL'] = '';
+
 			$ret = update_site_config($config_array, $download);
 			if ($download && !is_array($ret)) {
 				ob_end_clean(); // discard html currently in output buffer
